build: Bump for Java 16